# tux_target

./: CMakeLists.txt  INSTALL  Makefile  README  Rules.mk  Variables.mk  crc_update.sh  make_tarball.sh  mtp-target-update.nsi  mtp-target.nsh  mtp-target.nsi  mtp-target.sln  mtp-target.supp  mtp-target.txt  object-viewer.nsh  object-viewer.nsi  object_viewer.cfg  upx.bat
CMakeModules/: FindMySQL.cmake  FindODE.cmake  FindSSLEAY.cmake  nel.cmake
chat/: database.safe
chat/help/: logo
chat/src/: channel.c  channel.h  command.c  command.h  crypt.c  crypt.h  database.c  database.h  group.c  group.h  list.c  list.h  mtp.c  mtp.h  object.h  server.c  server.h  socket.c  socket.h  token.c  token.h  types.h  user.c  user.h  variable.c  variable.h
client/: CMakeLists.txt  Makefile  client.vcproj  mtp_target_default.cfg  resource.h  script1.rc  tux-target.cfg.in  tux-target.desktop  val  val_client
client/data/gui/: arrow.tga  checking.xml  cursor.tga  editor.xml  error_server.xml  hbutton-active.tga  hbutton-insensitive.tga  hbutton-prelight.tga  header_listview.tga  icon_gg.tga  icon_lol.tga  icon_sad.tga  icon_smile.tga  login.xml  login_lan.xml  menu.xml  row_listview.tga  selected_row_listview.tga  server_item.xml  server_list.xml  updating.xml
client/data/gui/custom/test_custom/: test_custom.lua
client/data/lua/: unknown.lua
client/data/particule/: logo.ps  snow.ps  unknown.ps
client/data/shape/: unknown.shape
client/data/sound/: mtp-target.m3u
client/data/texture/: font.tga  intro_logo.tga  snow.tga  unknown.tga
client/src/: 3d_task.cpp  3d_task.h  CMakeLists.txt  Makefile  background_task.cpp  background_task.h  camera.cpp  camera.h  chat_task.cpp  chat_task.h  client.rc  config_file_task.cpp  config_file_task.h  controler.cpp  controler.h  editor_task.cpp  editor_task.h  end_task.cpp  end_task.h  entity.cpp  entity.h  entity_lua_proxy.cpp  entity_lua_proxy.h  entity_manager.cpp  entity_manager.h  external_camera_task.cpp  external_camera_task.h  fi_ime.cpp  fi_ime.h  font_manager.cpp  font_manager.h  frame_donation.cpp  frame_error.cpp  frame_help.cpp  frame_languages.cpp  frame_login.cpp  frame_message.cpp  frame_register.cpp  frame_server_list.cpp  frame_settings.cpp  (+119 more)
common/: async_job.cpp  async_job.h  constant.h  custom_floating_point.cpp  custom_floating_point.h  editable_element_common.cpp  editable_element_common.h  load_mesh.cpp  load_mesh.h  lua_nel.cpp  lua_nel.h  lua_utility.cpp  lua_utility.h  luna.h  lunar.h  module_common.cpp  module_common.h  net_message.cpp  net_message.h  particles_common.cpp  particles_common.h  pause_flag.h  start_point_common.cpp  start_point_common.h
data/gui/: box_debug.tga  donation.xml  entry.tga  error.xml  frame.tga  hbutton.tga  help1.xml  help2.xml  help3.xml  hud_arrow.tga  hud_gauge.tga  key.tga  languages.xml  login.xml  logo.tga  message.xml  progress-bar.tga  progress.tga  register.xml  scheme.tga  settings.xml  test.xml
data/lang/: ca.uxt  ct.uxt  de.uxt  en.uxt  es.uxt  fr.uxt  it.uxt  ja.uxt  pl.uxt  pt.uxt  ru.uxt  sv.uxt  zh.uxt
data/level/: level_all_on_one.lua  level_arena.lua  level_bowls1.lua  level_classic.lua  level_classic_easy3.lua  level_classic_easy4.lua  level_classic_fight.lua  level_classic_flat.lua  level_classic_flat_fight.lua  level_darts.lua  level_dont_go_too_far.lua  level_donuts.lua  level_donuts2.lua  level_easy1.lua  level_easy2.lua  level_easy3.lua  level_easy4.lua  level_extra_ball.lua  level_extra_ball2.lua  level_gates_easy.lua  level_gates_hard.lua  level_gates_ramp.lua  level_gates_zig_zag.lua  level_hit_me.lua  level_mtp_paint.lua  level_paint.lua  level_physics_test.lua  level_pyramid_stairs.lua  level_race.lua  level_run_away.lua  level_snow_dual_ramp.lua  level_snow_fall.lua  level_snow_funnel.lua  level_snow_line.lua  level_snow_pyramid.lua  level_snow_reverse_pyramid.lua  level_snow_tube.lua  level_stairs.lua  level_stairs2.lua  level_sun_cross.lua  (+12 more)
data/lua/: level_arena_server.lua  level_bowls1_server.lua  level_darts_server.lua  level_default_server.lua  level_extra_ball_server.lua  level_gates_server.lua  level_hit_me_server.lua  level_paint_server.lua  level_race_server.lua  level_run_away_server.lua  level_snow_funnel_server.lua  level_stairs_server.lua  level_sun_extra_ball_server.lua  level_team_server.lua  utilities.lua
data/particle/: sun.ps  trace2_open.ps  trace3_close.ps
data/shape/: box_score.shape  box_score_env.shape  boxae.shape  col_box.shape  cylinder_score.shape  entity_pingoo_close.shape  entity_pingoo_open.shape  entity_sphere_close.shape  entity_sphere_open.shape  gate.shape  race_jump.shape  race_turn_90.shape  sign_score.shape  sky_snow.shape  sky_sun.shape  snow_bowl.shape  snow_box.shape  snow_box10.shape  snow_funnel.shape  snow_island.shape  snow_island2.shape  snow_island3.shape  snow_ramp.shape  snow_target_100.shape  snow_target_100_flat.shape  snow_target_300.shape  snow_target_300_flat.shape  snow_target_50.shape  snow_target_50_flat.shape  snow_torus.shape  snow_tube.shape  sun_ramp.shape  water_light.shape  wood_ramp.shape  wood_target.shape
login_service/: CMakeLists.txt  connection_client.cpp  connection_client.h  connection_ws.cpp  connection_ws.h  login_service.cfg  login_service.cpp  login_service.h
server/: auto_update_crc.sh  mtp_target_service_default.cfg  tuxtarget.sql  val
server/src/: CMakeLists.txt  bot.cpp  bot.h  client.cpp  client.h  command.cpp  command.h  ending_session_state.cpp  ending_session_state.h  entity.cpp  entity.h  entity_lua_proxy.cpp  entity_lua_proxy.h  entity_manager.cpp  entity_manager.h  level.cpp  level.h  level_lua_proxy.cpp  level_lua_proxy.h  level_manager.cpp  level_manager.h  lua_engine.cpp  lua_engine.h  main.cpp  main.h  module.cpp  module.h  module_lua_proxy.cpp  module_lua_proxy.h  net_callbacks.cpp  net_callbacks.h  network.cpp  network.h  physics.cpp  physics.h  running_session_state.cpp  running_session_state.h  session_manager.cpp  session_manager.h  session_state.cpp  (+15 more)
www/: crc.php  devilconvert.c  dump.php  highscore.php  index.php  send.php  stats.php  view_custom.php
(+191 files in other folders)
